NA-mutable-state-flow
- Added idea to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,9 @@
 *.iml
 *.jks
 .gradle
+.idea
 /local.properties
 /keystore.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-/.idea/gradle.xml
 .DS_Store
 /app/release
 /build
